js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-braceless-typeof-import.js
DONOTEVALUATE
(
)
;
if
(
true
)
typeof
import
;
